--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "it-incubator-todolist-ts",
+  "name": "todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,10 +14,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.24",
     "@types/uuid": "^8.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.2.0",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2"
   },
